--- a/css/home.css
+++ b/css/home.css
@@ -15,3 +15,20 @@ header {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
+.nav-area {
+    float: right;
+    list-style: none;
+    margin-top: 30px;
+}
+
+.nav-area li {
+    display: inline-block;
+
+}
+
+.nav-area li a {
+    color:blanchedalmond
+    text-decoration: none;
+    padding: 5px 2opx;
+}
