--- a/css/home.css
+++ b/css/home.css
@@ -33,6 +33,14 @@ body {
     
 }
 
+.nav-area li a {
+    color: white;
+    text-decoration: none;
+    padding: 5px 20px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 14px;
+}
+
 
 
 
