--- a/css/home.css
+++ b/css/home.css
@@ -37,7 +37,7 @@ body {
     color: white;
     text-decoration: none;
     padding: 5px 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Zen Loop', cursive;
     font-size: 14px;
 }
 
