--- a/css/home.css
+++ b/css/home.css
@@ -28,8 +28,8 @@ body {
 }
 
 .logo {
-    max-width: 20%;
-    max-height: 20%;
+    max-width: 8%;
+    max-height: 10%;
     
 }
 
@@ -46,6 +46,28 @@ body {
     color: black
 }
 
+.logo img {
+    width: 100px;
+    float: left;
+    height: auto;
 
+}
+
+.welcome-text {
+    position: absolute;
+    width: 600px;
+    height: 300px;
+    margin: 20% 30%;
+    text-align: center;
+
+
+}
+
+.welcome-text h1 {
+    text-align: center;
+    color: black;
+    text-transform: uppercase;
+    font-size: 60px;
+}
 
 
