--- a/css/home.css
+++ b/css/home.css
@@ -70,4 +70,20 @@ body {
     font-size: 60px;
 }
 
+.welcome-text a {
+    border: 1px solid #fff;
+    padding: 10px 25px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-top: 20px;
+    display: inline-block;
+    color: black;
+}
+
+.welcome-text a:hover {
+    background: #fff;
+    color: darkgreen
+}
+
 
