--- a/css/recipe.css
+++ b/css/recipe.css
@@ -81,7 +81,7 @@ img {
     margin-right: 5%;
     border-radius: 50%;
     box-shadow: 5px 5px 3px pink;
-    shapre-outside: circle(50%);
+    shape-outside: circle(50%);
 }
 
 header h2 {
