--- a/css/form.css
+++ b/css/form.css
@@ -21,7 +21,7 @@ body {
 #wrapper {
     width: 60%;
     background-color: lightblue;
-    color: black;
+    color: whitesmoke;
     padding: 2rem;
     border-radius: 2rem;
     margin: 0 auto;
