--- a/css/form.css
+++ b/css/form.css
@@ -51,3 +51,25 @@ form {
     padding-left: 3rem;
 }
 
+label,
+span {
+display: inline-block;
+width: 250px;
+margin-right: 20px;
+text-align: right;
+}
+
+.radio label {
+    width: 12px;
+}
+
+span {
+    margin-top: 20px ;
+    margin-bottom: 20px;
+}
+
+input[type=text],
+input[type=email],
+input[type=tel]
+     padding
+
