--- a/css/form.css
+++ b/css/form.css
@@ -70,6 +70,44 @@ span {
 
 input[type=text],
 input[type=email],
-input[type=tel]
-     padding
+input[type=tel] {
+    padding: 10px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 8px;
+}
+
+textarea {
+    border-radius: 8px;
+}
+
+
+input[type=checkbox],
+input[type=radio] {
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+}
+
+
+select {
+    height: 20px;
+}
+
+button {
+    background-color: antiquewhite;
+    color: blue;
+    padding: .5rem;
+    width: 5rem;
+    border: none;
+    margin-bottom: 1rem;
+    margin-left: 80%;
+    border-radius: 8px;
+    text-transform: uppercase;
+    font-size: .75rem;
+}
+
+
+    
+
 
