--- a/css/form.css
+++ b/css/form.css
@@ -95,7 +95,7 @@ select {
 }
 
 button {
-    background-color: antiquewhite;
+    background-color: lightgreen;
     color: blue;
     padding: .5rem;
     width: 5rem;
